<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">星叙</string>
</resources>

